# PROJ300-Desktop-App

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json
Desktop_Application/: CMakeLists.txt  vcpkg.json
Desktop_Application/include/: RendererBackend.hpp
include/: Application.hpp  BaseApplication.hpp  Bilateration.hpp  Buffer.hpp  ConstPosKalmanFilter.hpp  DiffDriveOdom.hpp  GraphWindow.hpp  InfoBar.hpp  LandmarkContainer.hpp  OdomKalmanFilter.hpp  RendererBackend.hpp  SerialInterface.hpp  SerialMonitor.hpp  ViewPort.hpp  ViewPortRenderable.hpp  WorldGrid.hpp  testRenderable.hpp
include/Core/: BaseApplication.hpp  Camera2D.hpp  RendererBackend.hpp  ViewPort.hpp  ViewPortRenderable.hpp
include/Localization/: DiffDriveOdom.hpp  LandmarkContainer.hpp  OdomKalmanFilter.hpp  PathController.hpp
include/UI/: BotControlWindow.hpp  ConfigWindow.hpp  GraphWindow.hpp  InfoBar.hpp  SerialMonitor.hpp  UIwindow.hpp
src/: Application.cpp  Camera2D.cpp  OdomKalmanFilter.cpp  RendererBackend.cpp  SerialInterface.cpp  ViewPort.cpp  main.cpp
src/Core/: Camera2D.cpp  RendererBackend.cpp  ViewPort.cpp
src/Localization/: ConstPosKalmanFilter.cpp  OdomKalmanFilter.cpp
